--- a/application/modules/default/views/scripts/user/partials/loopPayout.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPayout.phtml
@@ -212,7 +212,7 @@ if ($this->countDownloadsOverall > 0) {
         <p>a) when and</p>
         <p>b) how much of the shown calculated amount is to be paid or</p>
         <p>c) to cancel partly or complete payment without giving any reasons.</p>
-        <p><br>A valid PayPal address must be maintained in your settings at the time of the payout. The total payout amount for a completed month must be at least one dollar. Lesser amounts can not be transferred to the next month. If you do not meet these requirements, we can not pay you anything. We will check these requirements every month. If all requirements were met and we did not decide otherwise you will be recieve the payout to your PayPal account.</p>
+        <p><br>A valid PayPal address must be maintained in your settings at the time of the payout. The total payout amount for a completed month must be at least one dollar. Lesser amounts will not be paid out and can not be transferred to the next month. If you do not meet these requirements, we can not pay you out anything that month. Non-paid-out months can not be retroactively will not be paid out in the future. We will check these requirements every month. If all requirements were met and we have no reasons to decide otherwise you will be receiving the payout amount to your PayPal account within the following month.</p>
             
     </div>
 </div>
